--- a/SceneSamples/KawaseLightStreakUnity/KawaseLightStreakUnity.html
+++ b/SceneSamples/KawaseLightStreakUnity/KawaseLightStreakUnity.html
@@ -56,7 +56,7 @@
 						break;
 					}
 				});
-				u.initPlugin(jQuery("#unityPlayer")[0], "Example.unity3d");
+				u.initPlugin(jQuery("#unityPlayer")[0], "KawaseLightStreakUnity.unity3d");
 			});
 		-->
 		</script>
